[package]
name = "crw-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP and CDP browser rendering engine for the CRW web scraper"

[features]
default = []
cdp = ["tokio-tungstenite", "crw-core/cdp"]
auto-browser = ["dep:dirs"]
# Opt-in Camoufox stealth renderer tier (REST, not CDP). Gates the `camoufox`
# module and its construction in `FallbackRenderer::new`. Default off so the
# lean build is byte-identical. Forwards to `crw-core/camoufox` for the
# config-level predicate and deadline math.
camoufox = ["crw-core/camoufox"]
# Opt-in cloak Turnstile-solver recovery tier (REST). Feature-gated + config-gated;
# absent from all defaults, so the lean build is byte-identical.
cloak = ["crw-core/cloak"]

[dependencies]
crw-core = { workspace = true }
crw-extract = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"], optional = true }
futures = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
rand = { workspace = true }
dashmap = { workspace = true }
dirs = { version = "6", optional = true }
moka = { workspace = true }
publicsuffix = { workspace = true }
regex = { workspace = true }
encoding_rs = "0.8"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
flate2 = "1"
brotli = "8"
wiremock = { workspace = true }
