[package]
name = "crw-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SearXNG-backed search client and result transforms for the CRW web scraper"

[dependencies]
crw-core = { path = "../crw-core", version = "0.7.1" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
