[package]
name = "crw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Firecrawl-compatible API server for the CRW web scraper"

[features]
default = []
cdp = ["crw-renderer/cdp"]

[dependencies]
crw-core = { path = "../crw-core", version = "0.0.1" }
crw-renderer = { path = "../crw-renderer", version = "0.0.1" }
crw-extract = { path = "../crw-extract", version = "0.0.1" }
crw-crawl = { path = "../crw-crawl", version = "0.0.1" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
