[package]
name = "crw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Firecrawl-compatible API server for the CRW web scraper"

[features]
default = []
cdp = ["crw-renderer/cdp"]
test-utils = []

[dependencies]
crw-core = { path = "../crw-core", version = "0.0.12" }
crw-renderer = { path = "../crw-renderer", version = "0.0.12" }
crw-extract = { path = "../crw-extract", version = "0.0.12" }
crw-crawl = { path = "../crw-crawl", version = "0.0.12" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum-test = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
crw-server = { path = ".", features = ["test-utils"] }
